--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -67,7 +67,7 @@
     <Button
         android:id="@+id/btn2"
         android:layout_width="197dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
         android:text="@string/make_it_done" />
