--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -20,25 +20,12 @@
         android:text="@string/to_do"
         android:textSize="25sp" />
 
-    <ScrollView
+
+    <ListView
+        android:id="@+id/listV2"
         android:layout_width="match_parent"
-        android:layout_height="238dp"
-        android:layout_marginTop="10dp">
-
-
-        <TextView
-            android:id="@+id/txt2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:lineSpacingMultiplier="1.5"
-            android:padding="8dp"
-            android:text="@string/a"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </ScrollView>
+        android:layout_height="245dp"
+        android:paddingLeft="5dp" />
 
     <TextView
         android:id="@+id/txt7"
