--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -30,7 +30,7 @@
     <TextView
         android:id="@+id/txt7"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="130dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/akaya_telivigala"
         android:paddingLeft="15dp"
@@ -58,5 +58,14 @@
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
         android:text="@string/make_it_done" />
+
+    <TextView
+        android:id="@+id/txt20"
+        android:layout_width="match_parent"
+        android:layout_height="39dp"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        android:text=""
+        android:textSize="20sp" />
 
 </LinearLayout>
